--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
+<!DOCTYPE html>
 <html>
- 
+<!-- inside head:
+ the links for google fonts -->
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+    <title>Lost pet</title>
+  </head>
+  <body>
+    <div class="card">
+      <h1 class="bungee-tint-regular">Lost dog, please help!</h1>
+      <p>Please help me find Tofu</p>
+      <h2>below you can see a photo of Tofu</h2>
+      <img src="https://koddsson.com/img/062e910c20d513883a625e6cfac4449a-576w.webp" alt="dog yawning" />
+    </div>
+    <!-- make a list of Tofu's colors -->
+     <h2>Tofu has 3 colors in his coat</h2>
+     <ol>
+      <li>Mostly Black</li>
+      <li>Large white spots around face and neck</li>
+      <li>Brown spots on hind legs</li>
+     </ol>
+     <a href="https://www.instagram.com/tofu_dog_amsterdam/">Link to his instagram to see more photos of him</a>
+
+  </body>
 
 </html>
